commit the entire changes

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -155,6 +155,134 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## Download data from gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://drive.google.com/file/d/1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id=url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?export=download&id=1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd\n",
+      "From (redirected): https://drive.google.com/uc?export=download&id=1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd&confirm=t&uuid=25ff5a54-9f37-4ccc-b8cb-c8ac22491199\n",
+      "To: d:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\kidney-CT-Scan-data.zip\n",
+      "100%|██████████| 57.6M/57.6M [00:09<00:00, 6.22MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gdown\n",
+    "\n",
+    "file_id = '1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd'\n",
+    "prefix = 'https://drive.google.com/uc?export=download&id='\n",
+    "gdown.download(prefix + file_id, \"kidney-CT-Scan-data.zip\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/drive/u/1/home1Gj_svjg7Hdeh6aPJCcovL2H3L0WzmYky\n",
+      "To: d:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\research\\kidney-ct-scan-image.zip\n",
+      "1.64kB [00:00, 1.38MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-ct-scan-image.zip'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix=\"https://drive.google.com/drive/u/1/home\"\n",
+    "gdown.download(prefix+file_id,\"kidney-ct-scan-image.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
