--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -80,56 +80,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'CONFIG_FILE_PATH' from 'cnnClassifier.constants' (d:\\end to end machine learning projects\\kidney disease classification predication\\kidney-disease-classification-deep-learning-project\\src\\cnnClassifier\\constants\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcnnClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcnnClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommom\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcnnClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'CONFIG_FILE_PATH' from 'cnnClassifier.constants' (d:\\end to end machine learning projects\\kidney disease classification predication\\kidney-disease-classification-deep-learning-project\\src\\cnnClassifier\\constants\\__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONFIG_FILE_PATH: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\config\\config.yaml\n",
+      "PARAMS_FILE_PATH: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\params.yaml\n"
      ]
     }
    ],
    "source": [
     "\n",
     "from cnnClassifier.constants import *\n",
-    "from cnnClassifier.utils.commom import read_yaml, create_directories\n",
-    "from cnnClassifier.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH"
+    "from cnnClassifier.utils.commom import read_yaml, create_directories\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CONFIG_FILE_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m      4\u001b[0m         config_filepath \u001b[38;5;241m=\u001b[39m CONFIG_FILE_PATH,\n\u001b[0;32m      5\u001b[0m         params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH):\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n",
-      "Cell \u001b[1;32mIn[9], line 4\u001b[0m, in \u001b[0;36mConfigurationManager\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m----> 4\u001b[0m         config_filepath \u001b[38;5;241m=\u001b[39m \u001b[43mCONFIG_FILE_PATH\u001b[49m,\n\u001b[0;32m      5\u001b[0m         params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH):\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams \u001b[38;5;241m=\u001b[39m read_yaml(params_filepath)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'CONFIG_FILE_PATH' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('D:/End to end machine learning projects/Kidney Disease classification predication/Kidney-Disease-Classification-Deep-Learning-Project/src'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cnnClassifier.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
+    "from cnnClassifier.utils.commom import read_yaml, create_directories\n",
+    "from cnnClassifier.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n",
     "\n",
     "class ConfigurationManager:\n",
-    "    def __init__(self,\n",
-    "                 config_filepath=CONFIG_FILE_PATH,\n",
-    "                 params_filepath=PARAMS_FILE_PATH):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
-    "        create_directories([self.config['artifacts_root']])\n",
+    "        create_directories([self.config.artifacts_root])\n",
     "\n",
     "\n",
     "    \n",
@@ -150,7 +149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONFIG_FILE_PATH: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\config\\config.yaml\n",
+      "PARAMS_FILE_PATH: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\params.yaml\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "CONFIG_FILE_PATH = Path(r\"D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\config\\config.yaml\")\n",
+    "PARAMS_FILE_PATH = Path(r\"D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\params.yaml\")\n",
+    "\n",
+    "print(f\"CONFIG_FILE_PATH: {CONFIG_FILE_PATH}\")\n",
+    "print(f\"PARAMS_FILE_PATH: {PARAMS_FILE_PATH}\")\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "print(os.path.exists(CONFIG_FILE_PATH))  # Should print True if the file exists\n",
+    "print(os.path.exists(PARAMS_FILE_PATH))  # Should print True if the file exists\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +239,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-31 21:44:57,799: INFO: commom: yaml file: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\config\\config.yaml loaded successfully]\n",
+      "[2024-07-31 21:44:57,824: INFO: commom: yaml file: D:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\params.yaml loaded successfully]\n",
+      "[2024-07-31 21:44:57,827: INFO: commom: created directory at: artifacts]\n",
+      "[2024-07-31 21:44:57,829: INFO: commom: created directory at: artifacts/data_ingestion]\n",
+      "[2024-07-31 21:44:57,831: INFO: 986331348: Downloading data from https://drive.google.com/file/d/1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd&confirm=t&uuid=1397bbd2-2cf9-4501-a0bc-3f217179e615\n",
+      "To: d:\\End to end machine learning projects\\Kidney Disease classification predication\\Kidney-Disease-Classification-Deep-Learning-Project\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 57.6M/57.6M [00:11<00:00, 4.81MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-31 21:45:15,131: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/1uXOGF7kUXBht0SUIKumZLW-I_57HIDgd/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
